[package]
name = "threading-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.81"
futures = "0.3.30"
futures-util = "0.3.30"
jsonrpsee = { version = "0.22.0", features = ["async-client", "client-web-transport"] }
# jsonrpsee-types = "0.24.0"
parking_lot = "0.12.3"
rand = "0.8.5"
subxt = {version = "0.37.0", features =["substrate-compat"] }
subxt-signer = { version = "0.37.0", features = ["unstable-eth"] }
subxt-core = "0.37.0"
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["formatting", "local-offset", "macros"] }
tokio = { version = "1.39.1", features = ["macros", "time", "rt-multi-thread", "sync"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["time","fmt","env-filter"] }
serde = "1.0.204"
serde_json = "1.0.121"
termplot = "0.1.1"
average = "0.15.1"
parity-scale-codec = "3.6.12"
chrono = "0.4.38"
hex = "0.4.3"
clap = { version = "4.5.3", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
ctrlc = "3.4.4"
