[package]
name = "substrate-txtesttool"
version = "0.1.0"
edition = "2021"
description = "A library and CLI tool for sending transactions to substrate-based chains, enabling developers to test and monitor transaction scenarios."
license = "Apache-2.0 OR GPL-3.0"
repository = "https://github.com/michalkucharczyk/tx-test-tool"

[[bin]]
name = "txtt"
path = "bin/main.rs"

[dependencies]
async-trait = "0.1.81"
futures = "0.3.30"
futures-util = "0.3.30"
jsonrpsee = { version = "0.24.8", features = [
	"async-client",
	"client-web-transport",
	"jsonrpsee-types",
] }
average = "0.15.1"
chrono = "0.4.38"
clap = { version = "4.5.3", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
ctrlc = "3.4.4"
hex = "0.4.3"
parity-scale-codec = "3.6.12"
parking_lot = "0.12.3"
rand = "0.9.0"
serde = "1.0.204"
serde_json = { version = "1.0.121", features = ["arbitrary_precision"] }
subxt = { version = "0.39.0" }
subxt-core = "0.39.0"
subxt-signer = { version = "0.39.0", features = ["unstable-eth"] }
termplot = "0.1.1"
thiserror = "2.0.11"
time = { version = "0.3.36", features = [
	"formatting",
	"local-offset",
	"macros",
] }
tokio = { version = "1.39.1", features = [
	"macros",
	"rt-multi-thread",
	"sync",
	"time",
] }
tokio-util = { version = "0.7.11", features = ["compat"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
	"env-filter",
	"fmt",
	"time",
] }
